# moviey

./: .gitignore  README.md  docker-compose.yml
configs/: backend.env  nginx.conf
scripts/: backup.sh
transcoder/: .env.template  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  new.txt
transcoder/.sqlx/: query-03d4046fa9ee0bfe000f789e5a744c5d1041ac7e23d65b22ff3000e3ebfd38c0.json  query-3019173cd834e27d415a246eccc7358404acec8be342b2032c1f657c84012572.json  query-436fa9ae710aa835f009ddc4bff837318fbbdb9764ed2218655aaadfd5b279f3.json  query-59741fc192d6a179ce6e4a64800ad5e45c08fee96deddc3e77b5b6d985100861.json  query-6fd86669d42f722595f5ed6ce51360fd99cd95c3a00cd487456aebb83588df6f.json  query-79d50988838eb9f97ec859e082968c8519ee226df84acd8ad5aee8e64236003d.json  query-8001a1615556d3cb2f17e49d07d8f2d4a9bee1051a6bf8a9eb3d97d70ad00465.json  query-8ae32720a4dabc253f8256a3b9127f17c1f0578c8afdfb3162df4a902f4c7414.json
transcoder/migrations/: 20260325000000_create_movies_table.sql  20260325000001_add_metadata_to_movies.sql  20260325000002_add_tables.sql  20260325000003_add_advanced_features.sql  20260325000004_add_watch_history.sql  20260325000005_add_recommendations.sql  20260325000005_add_rich_metadata_watch_history.sql  20260325000006_add_user_behavior_snapshot.sql  20260325000007_add_data_quality_flags.sql  20260325000008_add_user_segments.sql  20260325000009_add_recommendations.sql  20260325000010_add_batch_jobs.sql
transcoder/src/: lib.rs  logging.rs  main.rs
transcoder/src/config/: redis.rs
transcoder/src/domains/: analytics.rs  favorites.rs  mod.rs  movie.rs  recommendation.rs  user.rs  watch_history.rs
transcoder/src/dtos/: favorites_dto.rs  mappers.rs  mod.rs  movie_dto.rs  recommendation_dto.rs  user_dto.rs  watch_history_dto.rs
transcoder/src/dtos/analytics_dto/: enums.rs  mod.rs  requests.rs
transcoder/src/handlers/: favorites.rs  mod.rs  movie.rs  recommendation.rs  user.rs  watch_history.rs
transcoder/src/handlers/analytics/: handler.rs  mod.rs
transcoder/src/handlers/favorites/: handler.rs  mod.rs
transcoder/src/handlers/jobs/: handler.rs  mod.rs
transcoder/src/handlers/movie/: handler.rs  mod.rs
transcoder/src/handlers/olds/: analytics.rs  user.rs
transcoder/src/handlers/recommendation/: handler.rs  mod.rs
transcoder/src/handlers/user/: handler.rs  mod.rs  validators.rs
transcoder/src/handlers/watch_history/: handler.rs  mod.rs
transcoder/src/middlewares/: auth_extractor.rs  mod.rs  security_headers.rs
transcoder/src/models/: analytics.rs  mod.rs  movie.rs  recommendation.rs  user.rs
transcoder/src/runner/: handler.rs  mod.rs  runner.rs
transcoder/src/scheduler/: executor.rs  jobs.rs  mod.rs  runner.rs
transcoder/src/services/: analytics.rs  hybrid_recommender.rs  mod.rs  segmentation.rs  validation.rs
transcoder/src/services/cache/: entries.rs  errors.rs  generic_cache.rs  invalidation.rs  keys.rs  mod.rs  store.rs  warming.rs
transcoder/src/services/recommendations/: collaborative_filtering.rs  content_base_filtering.rs  mod.rs
web/: .env  Dockerfile  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx  env.config.js
(+61 files in other folders)
