[package]
name = "transcoder"
version = "0.1.0"
edition = "2024"

[dependencies]
notify-debouncer-full = "0.7.0"
tokio = { version = "1.50", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
bcrypt = "0.19.0"
jsonwebtoken = "10.3.0"
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
thiserror = "2.0.18"
