[profile.release]  
opt-level = 3  
lto = true  
codegen-units = 1  
strip = true  

[profile.production]  
inherits = "release"  

[package]
name = "transcoder"
version = "0.1.0"
edition = "2024"

[dependencies]
notify-debouncer-full = "0.7.0"
tokio = { version = "1.50", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "bigdecimal", "rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
thiserror = "2.0.18"
dotenv = "0.15.0"
serde_json = "1.0.149"
rust_decimal = "1.40.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
utoipa = { version = "5.4.0", features = ["chrono", "openapi_extensions", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
tokio_schedule = "0.3.2"
ndarray = "0.17.2"
ndarray-stats = "0.7.0"
redis = { version = "1.1.0", features = ["aio", "connection-manager", "tokio-comp"] }
arc-swap = "1.9.0"
